--- a/index.html
+++ b/index.html
@@ -11,14 +11,11 @@
 </head>
 
 <body>
-  <!-- <nav class="navbar navbar-dark bg-dark">
-        <span class="navbar-brand mb-0 h1">Meal Time Giphy Search</span>
-        <form class="form-inline my-2 my-lg-0" id="Search">
-                <label for="food-input" id="instructions">Recipes</label>
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="add-food">
-                <button class="btn btn-outline-info" type="submit" id="addTopic">Search</button>
-              </form>
-    </nav> -->
+  <div class="jumbotron jumbotron-fluid">
+    <div class="container">
+      <h1 class="display-4">Food Giphy!</h1>
+    </div>
+  </div>
 
   <div class="container">
     <div id="buttons-view"></div>
